kustomize/overlays/stage/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp
spec:
  rules:
    - host: stage.nodeapp.example.com
